[gd_scene load_steps=8 format=3 uid="uid://drjcnqcs8jxfw"]

[ext_resource type="Script" path="res://modules/world_ui/world_ui.gd" id="1_p1x04"]
[ext_resource type="Texture2D" uid="uid://dpf4a5k1w3l1d" path="res://assets/crosshair001.png" id="1_svsyq"]
[ext_resource type="Theme" uid="uid://d5t53bidh7yv" path="res://assets/themes/default.tres" id="2_f2ann"]
[ext_resource type="Shader" path="res://modules/world_ui/world_ui.gdshader" id="4_ecvym"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kyi0h"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ibuc4"]
bg_color = Color(0.6, 1, 0.6, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_medq8"]
shader = ExtResource("4_ecvym")
shader_parameter/primary_color = Color(0, 1, 0, 1)
shader_parameter/outline_color = Color(0, 0, 0, 1)
shader_parameter/unfilled_color = Color(0.443, 0.443, 0.443, 1)
shader_parameter/value = 0.0
shader_parameter/smooth_ = 0.005
shader_parameter/width_in = 0.85
shader_parameter/width_out = 0.95
shader_parameter/border_width = 0.03

[node name="WorldUI" type="Control" groups=["world_ui"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_p1x04")

[node name="Crosshair" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.233333
anchor_right = 0.7
anchor_bottom = 0.766667
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_svsyq")
metadata/_edit_use_anchors_ = true

[node name="InteractingLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.167187
anchor_top = 0.695833
anchor_right = 0.832812
anchor_bottom = 0.791667
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
theme = ExtResource("2_f2ann")
theme_override_font_sizes/font_size = 12
text = "Press E To Pick Up Flashlight"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BatteryLife" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.84375
anchor_top = 0.95
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1
theme_override_styles/background = SubResource("StyleBoxFlat_kyi0h")
theme_override_styles/fill = SubResource("StyleBoxFlat_ibuc4")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="RadialProgressBar" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_medq8")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
